--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.0.0",
     "handlebars": "^4.7.8",
     "minio": "^8.0.6",
     "nodemailer": "^7.0.10",
